// Generate Proto At ./AuthApp
// protoc -I src/connectAppProto --go_out=plugins=grpc:src/connectAppProto src/connectAppProto/connectApp.proto

syntax = "proto3";

package connectApp;
option go_package = "proto";

service Dispatcher {
    rpc DispatchPlayer(DispatchRequest) returns (DispatchReply) {}
    rpc ReportAgentInfo(AgentInfo) returns (OkReply) {}
}

message DispatchRequest {
    string accountId = 1;
    string groupId = 2;
}

message DispatchReply {
    string connectAppId = 1;
    string connectAppHost = 2;
    string connectAppPort = 3;
}

message AgentInfo {
    string uuid = 1;
    string host = 2;
    string port = 3;
    int32  ccu  = 4;
}

message OkReply {
    bool success = 1;
}
